fix: button spacing for main menu actions

--- a/app/styles/mainmenu.styl
+++ b/app/styles/mainmenu.styl
@@ -99,10 +99,15 @@
 	justify-content space-between
 	flex-wrap wrap
 
-	height 140px
+	height 150px
 
 .viewer .fullscreen .menu button
 	margin-left 10px
+	margin-top 0px
+
+.viewer .menu button:nth-child(1),
+.viewer .menu button:nth-child(2)
+	margin-top 0px
 
 .viewer .menu button 
 	text-align center
@@ -112,6 +117,7 @@
 	
 	font-size 12px
 
+	margin-top 5px
 	padding 10px
 	width 165px
 	height 45px
